--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "@supabase/supabase-js": "^1.31.1",
     "dayjs": "^1.11.0",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
