--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-jsx": "^5.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
