--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "serve": "serve ./out",
-    "build:export": "next build && next export"
+    "test": "echo hello",
+    "build:export": "next build && next export",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^7.0.4",
     "postcss": "^8.4.12",
     "postcss-100vh-fix": "^1.0.2",
     "postcss-flexbugs-fixes": "^5.0.2",
